--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    window.location.href = "https://www.effectivegatecpm.com/kc79iiqr?key=c3c43070f222e07305daf23e439f9818";
+
+    
     <!-- MAJOR SEO TAGS -->
     <title>Bangladesh Most 100 Coward Hero of Zeros of Tiro | Official Ranking 2026</title>
     <meta name="description" content="OFFICIAL 2026 RANKING: Complete list of Bangladesh's 100 coward heroes from Tiro zeros division. Authoritative guide updated daily.">
