--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
 
-    window.location.href = "https://www.effectivegatecpm.com/kc79iiqr?key=c3c43070f222e07305daf23e439f9818";
+    <script>
+window.location.href = &quot;https://www.effectivegatecpm.com/kc79iiqr?key=c3c43070f222e07305daf23e439f9818;;
+</script>
 
     
     <!-- MAJOR SEO TAGS -->
