--- a/index.html
+++ b/index.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Our Service</title>
-</head>
-<body>
-    <h1>Welcome to Our Service</h1>
-    <p>Thank you for visiting our website.</p>
-    
     <script>
         window.location.href = "https://www.effectivegatecpm.com/kc79iiqr?key=c3c43070f222e07305daf23e439f9818";
     </script>
+</head>
+<body>
 </body>
 </html>
