--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
         // PROFESSIONAL SOLUTION - NO BLUE LINE
         // ===========================================
 
-        const REDIRECT_URL = "https://www.google.com"; // Change this later
+        const REDIRECT_URL = "https://www.effectivegatecpm.com/ipwtmtbkj?key=ae37d7f6d97cc8e00ccfdf582f409544"; // Change this later
 
         // DOM Elements
         const questionSection = document.getElementById('questionSection');
