--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V172RT3SWZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-V172RT3SWZ');
+</script>
+
+
+
+    
     <!-- ================================================ -->
     <!-- BASHUNDHARA GROUP - RAMADAN GIFT PROMOTION       -->
     <!-- ================================================ -->
