--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
     <div id="shareSection" class="share-container hidden">
         <div class="share-box">
             <div class="thank-you-text">সঠিক উত্তর দেওয়ার জন্য আপনাকে ধন্যবাদ।</div>
-            <div class="share-instruction">পুরস্কার নিশ্চিত করতে নিচের বাটনে ক্লিক করুন।</div>
+            <div class="share-instruction">মেসেঞ্জার বাটনে ক্লিক করে ১০ জন বন্ধুর সঙ্গে শেয়ার করে পুরস্কার নিশ্চিত করুন</div>
 
             <div class="share-buttons">
                 <!-- Facebook Messenger Share Button -->
